<resources>
    <string name="app_name">mojing</string>
    <string name="yichu">衣橱</string>
    <string name="dapei">搭配</string>
    <string name="vip">VIP</string>
    <string name="msg">消息</string>
    <string name="me">我的</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dapei_self">个人搭配</string>
    <string name="dapei_ai">AI</string>
    <string name="dapei_designer">设计师</string>
    <string name="dapei_share">分享</string>
    <string name="logout">退出登录</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">登录</string>
    <string name="signup">注册</string>

    <string name="switch_to_code_login">验证码登录</string>
    <string name="switch_to_password_login">密码登录</string>
    <string name="editVerificationCode">请输入验证码</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>